Update Curriculum data + some github actions fixes / upgrade (#18)
* Update Curriculum data

* Pin puppeteer version in Dockerfile

* Small fix for puppetter_build_pdf.js

* Delete deprecated env vars management in github actions

* Upgrade download-artifact module in github action

* Delete unused file

* Update actions checkout to v4 in Github actions

* Update actions upload-artfiact to v4 in Github actions

* Update action jekyll-build-pages to v1.0.11 in Github actions

* Add public by default setting for terraform bucket s3 part

* Fix terraform : public access setup wasn't awaited

* Still fixing terraform

* Delete public-read acl for objects (laready managed by policy)

* Fix Github action for uploading pdf (glibc compatible not found)

* Force latest version for download-artifact for github actions

* Try fixing glibc problem for github actions by downgrading to old ubuntu versions

* Restore latest ubuntu version for Github actions

* Use node container and installs aws-cli manually for github actions

* Installer doesn't work in github actions => install manually aws cli

* Do not print some of the work experiences

* Hide internship when printing (too much space for nothing)

---------

Co-authored-by: Corentin Ducatez <corentin_ducatez@hotmail.fr>

--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -20,7 +20,7 @@ jobs:
     container: 
       image: ghcr.io/wasta-geek/puppeteer_build_pdf:latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Build FR pdf
@@ -28,7 +28,7 @@ jobs:
       - name: Build EN pdf
         run: node ${{ env.SCRIPT_PATH }} language=en url=${{ inputs.URL }}
       - name: Archive PDF files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pdf-files
           path: /home/*.pdf
@@ -37,12 +37,18 @@ jobs:
     needs:
       - build_pdf_files
     container:
-      image: amazon/aws-cli
+      image: node:23-bullseye
     environment:
       name: ${{ inputs.ENVIRONMENT_NAME }}
     env: 
       AWS_EC2_METADATA_DISABLED: true
     steps:
+      - name: Install AWS cli
+        run: |
+          curl -L -o install-aws.sh https://raw.githubusercontent.com/unfor19/install-aws-cli-action/master/entrypoint.sh
+          chmod +x install-aws.sh
+          ./install-aws.sh "v2" "amd64"
+          rm install-aws.sh  
       - name: Register with credentials
         run: |
           aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}" --profile ${{ inputs.ENVIRONMENT_NAME }}
@@ -50,7 +56,7 @@ jobs:
           aws configure set region "${{ secrets.AWS_DEFAULT_REGION }}" --profile ${{ inputs.ENVIRONMENT_NAME }}
           aws configure set output "${{ secrets.AWS_DEFAULT_OUTPUT }}" --profile ${{ inputs.ENVIRONMENT_NAME }}
       - name: Download a single artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4.3.0
         with:
           name: pdf-files
       - name: Upload FR pdf
