--- a/.github/workflows/clean_site_s3.yml
+++ b/.github/workflows/clean_site_s3.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
       - uses: hashicorp/setup-terraform@v2
       - name: Checkout files
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Prepare tfvars file with needed variables
         run: |
           raw_bucket_name="${{ env.BASE_NAME_BUCKET }}-${{ env.PR_REF_NAME }}"
-          echo "::set-output name=bucket_name::${raw_bucket_name////-}"
+          echo "bucket_name=${raw_bucket_name////-}" >> $GITHUB_OUTPUT
           echo "aws_credential = {
               AWS_ACCESS_KEY_ID     = \"${{ secrets.AWS_ACCESS_KEY_ID }}\"
               AWS_SECRET_ACCESS_KEY = \"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"
