--- a/docs/_data/contact.yml
+++ b/docs/_data/contact.yml
@@ -24,5 +24,5 @@ availability_text:
   en: "Availability"
   fr: "Disponibilité"
 availability_date:
-  en: "From end of May 2025"
-  fr: "A partir de fin Mai 2025"
+  en: "Immediately"
+  fr: "Immédiat"
