Readibility improvements (bold / italic) and some wording refactoring + more precise 'about me' text

--- a/docs/_data/contact.yml
+++ b/docs/_data/contact.yml
@@ -15,8 +15,8 @@ email_text:
   fr: "e-mail"
 email: "corentin_ducatez@hotmail.fr"
 profile:
-  en: "Software Developer with a passion for DevOps oriented missions, I'm currently looking to join a team where I could take benefits of my skills, improves them and discovers new horizons."
-  fr: "Développeur logiciel avec une appétence pour les tâches en lien avec l'esprit DevOps, je cherche actuellement à rejoindre une équipe dans laquelle je pourrais mettre à profit mes compétences actuelles, les améliorer et continuer à découvrir de nouveaux horizons."
+  en: "Currently looking for a Backend developer position with (ideally) some DevOps oriented tasks included. <br>But I stay open to positions where I would be a good match for."
+  fr: "A la recherche d'un poste de développeur Backend avec (idéalement) des tâches liés aux principes DevOps. <br>Je reste cependant ouvert à des postes dans lequel mon expérience pourrait être pertinente."
 not_available_text:
   en: "Unwilling to accept a new job"
   fr: "Peu enclin à changer d'emploi"
