--- a/docs/_data/work_experiences.yml
+++ b/docs/_data/work_experiences.yml
@@ -1,5 +1,5 @@
 section_title:
-  fr: Expériences professionnelles
+  fr: Expériences professionnellesssssssssss
   en: Work experiences
 content:
   mindbaz / sweego:
