Simplify github action workflow

--- a/.github/workflows/build_pdf_send_s3.yml
+++ b/.github/workflows/build_pdf_send_s3.yml
@@ -13,7 +13,7 @@ on:
         required: true
 
 env:
-  SCRIPT_PATH: /home/puppeteer_build_pdf.js
+  SCRIPT_PATH: ./puppeteer_build_pdf.js
 jobs:
   build_pdf_files:
     runs-on: ubuntu-latest
