--- a/docs/_data/contact.yml
+++ b/docs/_data/contact.yml
@@ -16,7 +16,7 @@ email_text:
 email: "corentin_ducatez@hotmail.fr"
 profile:
   en: "Currently looking for a Backend developer position with (ideally) some DevOps oriented tasks included. <br>But I stay open to positions where I would be a good match for."
-  fr: "A la recherche d'un poste de développeur Backend avec (idéalement) des tâches liés aux principes DevOps. <br>Je reste cependant ouvert à des postes dans lequel mon expérience pourrait être pertinente."
+  fr: "A la recherche d'un poste de développeur Backend avec (idéalement) quelques tâches liés aux principes DevOps. <br>Je reste cependant ouvert à d'autres postes pour lequel mon expérience serait pertinente."
 not_available_text:
   en: "Unwilling to accept a new job"
   fr: "Peu enclin à changer d'emploi"
